1.52    2009-04-15      Scalar context bug fixed in script, thanks to
                          Mike Kelly

1.51    2009-04-14      OS "families" can tell you what their members are;
                        Update Extending.pod to explain that

1.50    2008-11-11      No bugs found in 1.49_01, bumping to 1.50
                        The "shrill demented choirs of wailing shells"
                          release

1.49_01 2008-11-05      add Haiku (thanks to Ingo Weinhold)
                        BeOS has a POSIXish shell
                        Makefile.PL can now explain what some of the
                          OSes and OS families are (thanks to Michael
                          Schwern for suggesting it)
                        The "only honest man to ever enter parliament"
                          release

1.46    2008-10-27      fix bug on Windows

1.45    2008-10-22      add QNX, QNX::v4, QNX::Neutrino
                          (thanks to Matt Kraai)
                        add Realtime family
                        doco about families
                        add licence text files
                        families now use documented interface instead
                          of embedding $^O values all over the place

1.44    2008-09-26      add D::A::MirOSBSD ($^O eq 'mirbsd')

1.43    2008-03-12      use-devel-assertos now prints some status updates;
                        Break up 'package Devel::CheckLib' in inc/ so
                          distributions including it don't get marked
                          as 'unauthorised'

1.42    2007-11-20      Applied Seth Blumberg's patch to make
                          list_platforms work on not-Unix;
                        Documented that ...::OSFeatures::* is reserved;
                        Added D::A::OSFeatures::POSIXShellRedirection

1.41    2007-11-07      Aaargh, fixed broken Makefile.PL

1.4     2007-11-07      Fix use-devel-assertos to update MANIFEST
