@@ -9,16 +9,35 @@ use File::Spec;
 use Data::Compare;
 
 my @files = grep { -f $_ } qw(Makefile.PL Build.PL);
-push @files, 'Makefile.PL' unless(@files);
 
 (my @oses = @ARGV) || die("You must specify at least one OS\n");
 
 eval "use Devel::AssertOS"; # to load AssertOS and CheckOS
 
+my $verbose = 1;
+if($oses[0] eq '-q') { # mostly to make tests shut the hell up
+    $verbose = 0;
+    shift @oses;
+}
+
 if($oses[0] eq '-l') {
     print join(', ', Devel::CheckOS::list_platforms())."\n";
     exit(0);
 }
+
+
+if(!-e 'MANIFEST') {
+    open(MANIFEST, '>>MANIFEST') || die("Can't update MANIFEST\n");
+    print MANIFEST "MANIFEST\n";
+    close(MANIFEST);
+}
+if(!@files) { # neither Makefile.PL no Build.PL exists, so create Makefile.PL
+    open(MANIFEST, '>>MANIFEST') || die("Can't update MANIFEST\n");
+    print MANIFEST "Makefile.PL\n";
+    close(MANIFEST);
+}
+
+push @files, 'Makefile.PL' unless(@files);
 
 # NB can't just use scalar list_platforms cos that won't tell us that,
 # eg, Linux::v2_6 also uses Linux
@@ -35,7 +54,7 @@ my %modules = map { $_ => $INC{$_} } grep { /Devel/i && /(Check|Assert)OS/i } ke
 mkdir 'inc';
 mkdir 'inc/Devel';
 mkdir 'inc/Devel/AssertOS';
-print "Extra directories created under inc/\n";
+print "Extra directories created under inc/\n" if($verbose);
 
 open(MANIFEST, '>>MANIFEST') || die("Can't update MANIFEST\n");
 foreach my $module (keys %modules) {
@@ -58,26 +77,25 @@ foreach my $module (keys %modules) {
     open(PM, '>'.File::Spec->catfile(@dircomponents, $file)) ||
         die("Can't write ".File::Spec->catfile(@dircomponents, $file).": $!");
     print PM $pm;
-    print "Copied $modules{$module} to\n       ".File::Spec->catfile(@dircomponents, $file)."\n";
+    print "Copied $modules{$module} to\n       ".File::Spec->catfile(@dircomponents, $file)."\n" if($verbose);
     close(PM);
 
     print MANIFEST join('/', @dircomponents, $file)."\n";
 }
 close(MANIFEST);
-print "Added necessary modules\n";
-print "Updated MANIFEST\n";
+print "Added necessary modules\n" if($verbose);
+print "Updated MANIFEST\n" if($verbose);
 
 foreach my $file (@files) {
-    open(FILE, $file) || next;
-    my $contents = <FILE>;
-    close(FILE);
+    my $contents = '';
+    if(open(FILE, $file)) { $contents = <FILE>; close(FILE); }
     open(FILE, ">$file") || die("Can't write $file\n");
     print FILE 'use lib inc; use Devel::AssertOS qw('.
         join(' ', @oses).
         ");\n\n";
     print FILE $contents;
     close(FILE);
-    print "Modified $file\n";
+    print "Modified $file\n" if($verbose);
 }
 
 =head1 NAME
@@ -91,6 +109,7 @@ This script, when run in the directory in which your shiny new module
 lives, will bundle whichever Devel::AssertOS modules you ask it to
 in the C<inc> directory, and update your Makefile.PL (or Build.PL)
 appropriately.  If neither exists, it will create a Makefile.PL.
+The MANIFEST file is updated if any files are created.
 
 =head1 SYNOPSIS
 
@@ -99,7 +118,9 @@ appropriately.  If neither exists, it will create a Makefile.PL.
 =head1 USAGE
 
 In the example above, this will insert code to make your module
-depend on one of the specified OSes.
+depend on one of the specified OSes, as well as update Makefile.PL /
+Build.PL / MANIFEST.  By default it's rather noisy, but you can
+suppress that by passing -q as the first parameter.
 
 =head1 SUPPORTED PLATFORMS
 
